src/theme.less
body{
  font-weight:300;
  text-rendering: optimizeSpeed;
  margin-bottom: 60px;
}

html {
  position: relative;
  min-height: 100%;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  font-size: 14px;
  background-color: #231b24;
  padding-top: 15px;
  padding-bottom: 15px;
  color: #6f6171;
  text-align: center;
  // border-top: 1px solid #e5e5e5;
  margin-bottom: 0;
}

footer a {
  color:inherit;
  text-decoration: underline;
}

.half-rule {
  width: 100px;
  margin: 40px auto;
}

main {
  color: #fff;
  margin-top: -60px;
}

main p {
  font-size: 18px;
}

pre {
  border-radius:0;
  background-color: #3f3f3f;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

pre code {
  -webkit-touch-callout: initial;
  -webkit-user-select: initial;
  -khtml-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
  text-rendering: optimizeSpeed;
}


.nsis-docs-masthead {
  padding: 120px 0;
}

/* Navbar */

.navbar {
  border-width: 0;
  border-radius: 0;

  &-default {

    .badge {
      background-color: #fff;
      color: @navbar-default-bg;
    }
  }

  &-inverse {

    .badge {
      background-color: #fff;
      color: @navbar-inverse-bg;
    }
  }

  &-brand {
    padding: 18.5px 15px 20.5px;
  }
}

.navbar-fixed-top {
  opacity: @opacity;
}

.navbar-default {
  z-index:2;
}

.navbar-default .navbar-toggle {
  border-color: 0;
  border: 0;
  color: #fff;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
  background-color: transparent;
}

.dropdown-menu {
  border-radius: 0;
  opacity:@opacity;
}

.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
  background-color: #3e333f;
}

.container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse {
  overflow:hidden;
}

.navbar .collapse {
  height: 100%
}

.navbar-collapse {
  box-shadow: inset 0 1px 0 rgba(205,191,227,0.3);
}

.nav-item {
  text-align: left;
}

.nav>li>a:focus, .nav>li>a:hover {
    background-color: @well-bg;
}

/* Buttons */

.btn:active {
  .box-shadow(none);
}

.btn-group.open .dropdown-toggle {
  .box-shadow(none);
}

button.btn.btn-success.dropdown-toggle {
  margin-left: -7px;
  width:30px;
}

.btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
  color: inherit;
  background-color: @brand-primary;
}

.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open>.dropdown-toggle.btn-success {
  color: #fff;
  background-color: #61c691;
  border-color: #61c691;
}

.btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover, .open>.dropdown-toggle.btn-primary.focus, .open>.dropdown-toggle.btn-primary:focus, .open>.dropdown-toggle.btn-primary:hover {
    background-color: #999;
    color: #fff;
}

.btn-primary.active, .btn-primary:active, .open>.dropdown-toggle.btn-primary {
  color: #fff;
}

.btn {
  border-width: 0;
  // margin: 5px;
  border-radius: 0;
}





.btn-link, .btn-link:hover {
  color:#fff;
}

.btn-outline-default {
  border-color: #ccc;
  color: #fff;
  background-color:transparent;
  box-shadow:inset 0px 0px 0px 2px rgba(255,255,255,0.4)
}

.btn-outline-default:hover {
  box-shadow:inset 0px 0px 0px 2px lighten(#fff, 5%);
}

.btn.rounded {
  border-radius: @border-radius-large;
}

.btn-group-vertical>.btn:last-child:not(:first-child),
.btn-group-vertical>.btn:first-child:not(:last-child){
    border-radius: 0;
}


.btn-default {
  background-color: #ccc;
  color: #444;
}

.btn-primary {
  background-color: @brand-primary;
  color:  #fff;
}

.btn-success {
  background-color:darken(@brand-success,10%);
  color:  #fff;
}

.btn-danger {
  background-color: @brand-danger;
  color:  #fff;
}

.btn-warning {
  background-color: @brand-warning;
  color:  #fff;
}

.btn-info {
  background-color: @brand-info;
  color:  #fff;
}


.btn-default:hover, .btn-default:focus {
  background-color: darken(#ccc,8%);
}

.btn-primary:hover, .btn-primary:focus {
  background-color: darken(@brand-primary,8%);
  border-color:transparent;
}

.btn-success:hover, .btn-success:focus {
  background-color: @brand-success;
  border-color:transparent;
}

.btn-danger:hover, .btn-danger:focus {
  background-color: darken(@brand-danger,8%);
  border-color:transparent;
}

.btn-warning:hover, .btn-warning:focus,
.btn-warning.active.focus, .btn-warning.active:focus, .btn-warning.active:hover, .btn-warning:active.focus, .btn-warning:active:focus, .btn-warning:active:hover, .open>.dropdown-toggle.btn-warning.focus, .open>.dropdown-toggle.btn-warning:focus, .open>.dropdown-toggle.btn-warning:hover {
  background-color: darken(@brand-warning,8%);
  border-color:transparent;
}

.btn-info:hover, .btn-info:focus {
  background-color: darken(@brand-info,8%);
  border-color:transparent;
}

.btn-switch.active {
    color: #fff;
    background-color: @brand-success;
    border-color: #adadad;
}

.btn-switch.active.focus,
.btn-switch.active:focus,
.btn-switch.active:hover,
.btn-switch:active.focus,
.btn-switch:active:focus,
.btn-primary:active:hover,
.open>.dropdown-toggle.btn-primary.focus,
.open>.dropdown-toggle.btn-primary:focus,
.open>.dropdown-toggle.btn-primary:hover {
    background-color: @brand-success;
    color: #fff;
}

.switch .btn {
    border: 1px solid rgba(32,32,32,0.25);
}

/* Typography */

.text-primary,
.text-primary:hover {
  color: @brand-primary;
}

.text-success,
.text-success:hover {
  color: @brand-success;
}

.text-danger,
.text-danger:hover {
  color: @brand-danger;
}

.text-warning,
.text-warning:hover {
  color: @brand-warning;
}

.text-info,
.text-info:hover {
  color: @brand-info;
}

/* Tables */

table,
.table {

  a:not(.btn) {
    text-decoration: underline;
  }

  .success,
  .warning,
  .danger,
  .info {
    color: #fff;

    a {
      color: #fff;
    }
  }

  > thead > tr > th,
  > tbody > tr > th,
  > tfoot > tr > th,
  > thead > tr > td,
  > tbody > tr > td,
  > tfoot > tr > td {
    border: none;
  }

  &-bordered > thead > tr > th,
  &-bordered > tbody > tr > th,
  &-bordered > tfoot > tr > th,
  &-bordered > thead > tr > td,
  &-bordered > tbody > tr > td,
  &-bordered > tfoot > tr > td {
    border: 1px solid @table-border-color;
  }
}

/* Forms */

label {
  text-transform: uppercase;
  font-size: small;
  font-weight: inherit;
}

.form-control,
input {
  border-width: 2px;
  .box-shadow(none);
  border-radius: 0;

  &:focus {
    .box-shadow(none);
  }
}

.has-warning {
  .help-block,
  .control-label,
  .radio,
  .checkbox,
  .radio-inline,
  .checkbox-inline,
  .form-control-feedback {
    color: @brand-warning;
  }

  .form-control,
  .form-control:focus {
    border: 2px solid @brand-warning;
  }

  .input-group-addon {
    border-color: @brand-warning;
  }
}

.has-error {
  .help-block,
  .control-label,
  .radio,
  .checkbox,
  .radio-inline,
  .checkbox-inline,
  .form-control-feedback {
    color: @brand-danger;
  }

  .form-control,
  .form-control:focus {
    border: 2px solid @brand-danger;
  }

  .input-group-addon {
    border-color: @brand-danger;
  }
}

.has-success {
  .help-block,
  .control-label,
  .radio,
  .checkbox,
  .radio-inline,
  .checkbox-inline,
  .form-control-feedback {
    color: @brand-success;
  }

  .form-control,
  .form-control:focus {
    border: 2px solid @brand-success;
  }

  .input-group-addon {
    border-color: @brand-success;
  }
}

/* Navs */

.nav {
  .open > a,
  .open > a:hover,
  .open > a:focus {
    border-color: transparent;
  }
}

.pager {
  a,
  a:hover {
    color: #fff;
  }

  .disabled {
    &>a,
    &>a:hover,
    &>a:focus,
    &>span {
      background-color: @pagination-disabled-bg;
    }
  }
}

/* Indicators */

.close {
  color: #fff;
  text-decoration: none;
  opacity: 0.4;

  &:hover,
  &:focus {
    color: #fff;
    opacity: 1;
  }
}

.alert {

  .alert-link {
    color: #fff;
    text-decoration: underline;
  }
}

/* Progress bars */

.progress {
  height: 10px;
  .box-shadow(none);
  .progress-bar {
    font-size: 10px;
    line-height: 10px;
  }
}

/* Containers */

.well {
  .box-shadow(none);
  border-radius: 0;
  background-color: @well-bg;
  color: #000;
  min-height: 20px;
  padding: 19px;
  margin-bottom: 20px;
  border: 1px solid transparent;

  a, a:hover {
      color: #000;
      text-decoration: none;
      font-weight: 400;
  }

  legend {
    color: #fff;
  }

  .nav>li>a {
      padding: 10px 15px 10px 0;
  }
}

.panel {
  &-default {
    .close {
      color: @text-color;
    }
  }
}

.modal {
  &-header {
    background-color: @navbar-default-bg;
    color: #fff;
  }

  &-body,
  &-footer {
    .close {
      color: @text-color;
    }
  }
}

.modal-content {
  border: 0;
}

.modal-header {
  background: @body-bg;
  color: @text-color;
}

.popover {
  color: @text-color;
}

.bg-gradient {
    background-color: @brand-average;
    background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…IgaGVpZ2h0PSIxIiBmaWxsPSJ1cmwoI2dyYWQtdWNnZy1nZW5lcmF0ZWQpIiAvPgo8L3N2Zz4=);
    background: -moz-linear-gradient(-45deg,@brand-bright 0,@brand-dark 100%);
    background: -webkit-gradient(linear,left top,right bottom,color-stop(0%,@brand-bright),color-stop(100%,@brand-dark));
    background: -webkit-linear-gradient(-45deg,@brand-bright 0,@brand-dark 100%);
    background: -o-linear-gradient(-45deg,@brand-bright 0,@brand-dark 100%);
    background: -ms-linear-gradient(-45deg,@brand-bright 0,@brand-dark 100%);
    background: linear-gradient(135deg,@brand-bright 0,@brand-dark 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=@brand-bright, endColorstr=@brand-dark, GradientType=1);
}

body {
    padding-top: 60px;
    padding-bottom: 4em;
}

a {
    color:inherit;
    text-decoration: underline;
}
a:hover {
    color:#6f6171;
}

a.btn-default,
a.btn-primary,
a.btn-success,
a.btn-info,
a.btn-danger,
a.btn-warning,
a.btn-outline-default,
.btn-group a,
.pager a,
.nav-tabs a,
.list-group a,
.nav-pills a,
.navbar a {
    text-decoration: none;
}

.alert .alert-link {
    text-decoration: none;
}

.bg-white {
    background-color: #fff;
}

.well {
    >input {
        background-color: rgba(255,255,255, 0.25);
        color: #fff;
        border: 1px solid rgba(255,255,255, 0.5);
    }
    >.form-control:focus {
        border: 1px solid rgba(255,255,255, 0.85);
    }

    &::-webkit-input-placeholder {
       color: rgba(255,255,255, 0.5);
    }
    &:-moz-placeholder { /* Firefox 18- */
       color: rgba(255,255,255, 0.5);
    }

    &::-moz-placeholder { /* Firefox 19+ */
       color: rgba(255,255,255, 0.5);
    }

    &:-ms-input-placeholder {
       color: rgba(255,255,255, 0.5);
    }
}

.progress,
.modal-content,
.label,
.badge,
.code,
.breadcrumb,
.input-group-addon,
.nav-tabs>li>a {
    border-radius: 0;
}

.pagination>li:first-child>a, .pagination>li:first-child>span,
.pagination>li:last-child>a, .pagination>li:last-child>span {
    border-radius: 0;
}

@media (max-width: 480px) {
  .nav-link {
    text-align: center;
  }
}

@media (max-width: 768px) {
  .dropdown-menu .divider {
    background-color: rgba(205,191,227,0.3);;
  }
}

